# Minkowski-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  _configtest  setup.py  setup_bak.py
MinkowskiEngine/modules/: senet_block.py
cmake/: FindOpenBLAS.cmake
examples/: completion.py  indoor.py
pybind11/: pybind11.cbp
src/: coords_manager.cpp  coordsmap.cpp  coordsmap.hpp
